--- a/res/pages/index.html
+++ b/res/pages/index.html
@@ -9,23 +9,30 @@
   <script src="/lib/debug_zone-0.5.1.min.js"></script>
   <script src="/lib/socket.io-3.0.5.min.js"></script>
   <script src="/lib/stylespam-2.1.6.min.js"></script>
+  <script src="/script/index.js"></script>
   <script>
+    const token = window.localStorage.getItem("token");
+    const user = window.localStorage.getItem("username");
+    connect(token , user);
      function OnStart(){
        const username = document.getElementById("username");
+       username.innerHTML = "Hola, " + (user != null ? user : '');
+       const debug = new Debugger("console");
+       debug.enable()
      }
   </script>
 </head>
 <body onload="OnStart();">
     <nav class="nav">
         <div class="nav__container">
-            <h2 class="nav__title" id="username">Hello, Username</h2>
+            <h2 class="nav__title" id="username">Hola, </h2>
 
             <ul class="nav__links">
                 <li class="nav__item">
-                    <a href="#repos" class="nav__link"><img src="https://cdn.glitch.global/c26b9902-066f-4585-abad-18355e6b944f/bx-stats.svg?v=1642106966968"></a>
+                    <a href="/repos" class="nav__link"><img src="https://cdn.glitch.global/c26b9902-066f-4585-abad-18355e6b944f/bx-stats.svg?v=1642106966968"></a>
                 </li>
                 <li class="nav__item">
-                    <a href="#works" class="nav__link"><img src="https://cdn.glitch.global/c26b9902-066f-4585-abad-18355e6b944f/bx-briefcase-alt.svg?v=1642106954477"></a>
+                    <a href="/works" class="nav__link"><img src="https://cdn.glitch.global/c26b9902-066f-4585-abad-18355e6b944f/bx-briefcase-alt.svg?v=1642106954477"></a>
                 </li>
                 <li class="nav__item">
                     <a href="#" class="nav__link"><img src="https://cdn.glitch.global/c26b9902-066f-4585-abad-18355e6b944f/bx-chat.svg?v=1642106960869"></a>
